# news-digest-engine

./: .env.example  .gitignore  .mcp.json  AGENT_CODEXCOMMENTARY.md  AGENT_DESIGN.md  AI_CAPABILITIES.md  AgentPractices.md  CLAUDE.md  CODEX.md  MEMORY_DESIGN.md  Makefile  ManualTesting.md  README.md  RUNBOOK.md  STATUS.md  arch_blueprint.md  clawd.memory.md  completion.md  future.md  overnightRUN.md  pyproject.toml  week4.md
artifacts/: FinalCodeFixes.md  agent-findings.md  digest_2026-01-14.html  digest_2026-01-15.html  fix-tasks.md
data/: news.db
evals/: cases.py  runner.py  summary_cases.py  summary_checks.py  summary_runner.py  summary_taxonomy.py  taxonomy.py
jobs/: build_digest.py  daily_run.py  run_advisor.py  update_weights.py
mcp-servers/: README.md
scripts/: codex_review.py  implement-prompt.txt  overnight_local.bat  read_docx.py  summary-prompt.txt
src/: advisor.py  advisor_tools.py  ai_score.py  artifacts.py  auth.py  cache_utils.py  db.py  error_codes.py  errors.py  eval.py  explain.py  feeds.py  grounding.py  json_utils.py  logging_utils.py  main.py  middleware.py  normalize.py  redact.py  repo.py  rss_fetch.py  rss_parse.py  run.py  schemas.py  scoring.py  ui_constants.py  views.py  weekly_report.py  weights.py
templates/: _base.html  config.html  date.html  error.html  history.html  home.html  item.html  settings.html  suggestions.html  welcome.html
tests/: README_ui_smoke.md  conftest.py  test_advisor_tools.py  test_ai_score.py  test_audit.py  test_auth.py  test_build_digest_job.py  test_cache_behavior.py  test_cache_utils.py  test_db.py  (+42 more)
(+47 files in other folders)
